style.css
* {
    font: inherit;
    padding: 0;
    margin: 0;
}

body {
    --bg-color: black;
    --main-color: oklch(63% 0.24 24.96);
    --accent-color: oklch(88% 0.11 81.21);
    
    background-image: url('./img/simone-secci-UQw2KouMFU8-unsplash.jpg');
    background-size: contain;
    height: 100svh;
    width: 100vw;
    
    
}

main {
    display: grid;
    gap: 2em;
/*     padding: 20px; */
    position: absolute;
    width: 100%;
}

div.content {
    background-color: oklch(from var(--main-color) l c h / .3);
    backdrop-filter: blur(15px) brightness(0.6);
    border-radius: 20px;
    box-shadow: 0 0 0 1px var(--accent-color), 2px 2px 10px 5px var(--main-color);
    position: relative;
    margin: 20px;
}

#imageHint {
    img {
        width: 100%;
        height: 100%;
        object-fit: contain;
        border-radius: 20px;
    }
}

#questionBox {
    color: white;
}

#Question {
    color: var(--accent-color);
    font-weight: bold;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    background-color: oklch(from var(--bg-color) l c h / .8);
    border-radius: 20px 20px 0 0;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    height: 2.5em;
    font-size: larger;
}

#Answers {
    margin: 10px;
    margin-top: 4em;
    list-style-type: none;
    li {
        margin-top: .8em;
        background-color: oklch(from var(--bg-color) l c h / .6);
        outline: 1px solid var(--accent-color);
        padding: .8em;
        border-radius: 100vh;
        transition: 200ms linear;
        cursor: pointer;
    }
    li:hover {
        box-shadow: 0 0 2px 3px white;
        letter-spacing: 1px;
    }
}

